force-app/main/default/objects/DeliveryOrderGroup__c/DeliveryOrderGroup__c.object-meta.xml
<CustomObject>
    <label>Delivery Order Group</label>
    <nameField>
        <displayFormat>DlvyOrderGrp-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Order Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>