force-app/main/default/objects/DeliveryOrderGroup__c/fields/DeliveryRouteGroup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRouteGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route Group</label>
    <referenceTo>DeliveryRouteGroup__c</referenceTo>
    <relationshipLabel>Delivery Order Group</relationshipLabel>
    <relationshipName>DeliveryRouteGroup</relationshipName>
    <type>Lookup</type>
</CustomField>