force-app/main/default/objects/DeliveryOrderGroup__c/fields/DeliveryRouteGroupName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRouteGroupName__c</fullName>
    <formula>DeliveryRouteGroup__r.Name</formula>
    <label>Delivery Route Group Name</label>
    <type>Text</type>
</CustomField>