force-app/main/default/objects/DeliveryOrderGroup__c/fields/IsScheduledForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledForDeletion__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate) &gt; 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Scheduled For Deletion</label>
    <type>Checkbox</type>
</CustomField>