force-app/main/default/objects/DeliveryOrderGroup__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>Job Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>