force-app/main/default/objects/DeliveryOrderGroup__c/fields/RouteDate__c.field-meta.xml
<CustomField>
    <fullName>RouteDate__c</fullName>
    <label>Route Date</label>
    <summarizedField>DeliveryOrder__c.RouteDate__c</summarizedField>
    <summaryForeignKey>DeliveryOrder__c.DeliveryOrderGroup__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>