force-app/main/default/objects/DeliveryOrderGroup__c/fields/RoutingPollCount__c.field-meta.xml
<CustomField>
    <fullName>RoutingPollCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Routing Poll Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>