force-app/main/default/objects/DeliveryOrderGroup__c/fields/RoutingSummary__c.field-meta.xml
<CustomField>
    <fullName>RoutingSummary__c</fullName>
    <label>Routing Summary</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>