force-app/main/default/objects/DeliveryOrderGroup__c/fields/StatusUpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>StatusUpdatedAt__c</fullName>
    <label>Status Updated At</label>
    <type>DateTime</type>
</CustomField>