force-app/main/default/objects/DeliveryOrderGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RouteDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DeliveryRouteGroup__c</columns>
    <columns>RoutingJobId__c</columns>
    <columns>RoutingStatus__c</columns>
    <columns>RoutingPollCount__c</columns>
    <columns>RoutingResponse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>