force-app/main/default/objects/DeliveryOrderGroup__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>RouteDate__c</columns>
    <columns>DeliveryRouteGroup__c</columns>
    <columns>RoutingJobId__c</columns>
    <columns>RoutingStatus__c</columns>
    <columns>RoutingPollCount__c</columns>
    <columns>RoutingResponse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>